# change-log

./: .gitignore  .travis.yml  README.rst  pyproject.toml
change/: __init__.py  _core.py  log.py
docs/: conf.py  index.rst
docs/subtool/: log.rst
